--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "vue": "^3.5.24",
-    "vue-i18n": "^11.1.12",
+    "vue-i18n": "^11.2.1",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@csstools/postcss-cascade-layers": "^5.0.2",
     "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "autoprefixer": "^10.4.22",
@@ -28,6 +29,6 @@
     "postcss-nested": "^7.0.2",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.4"
   }
 }
