ci: update GitHub Actions workflows

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -34,15 +34,18 @@ jobs:
             os: ubuntu-latest
     name: Node ${{ matrix.node-version }} on ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           submodules: 'recursive'
       - uses: pnpm/action-setup@v4
+        id: pnpm-install
         with:
+          run_install: false
           version: 10
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
-          # cache: 'pnpm'
-      - run: pnpm install
+          cache: 'pnpm'
+          registry-url: https://registry.npmjs.com
+      - run: pnpm install --no-frozen-lockfile
       - run: pnpm test
