--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -23,20 +23,22 @@ jobs:
     outputs:
       build-artifact-name: ${{ steps.build.outputs.artifact-name }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          ref: main
+          submodules: 'recursive'
 
       - uses: pnpm/action-setup@v4
-        name: Install pnpm
+        id: pnpm-install
         with:
-          version: 10
           run_install: false
+          version: 10
 
-      - name: Install Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v6
         with:
-          node-version: 22
-          # cache: 'pnpm'
+          node-version: 24
+          cache: 'pnpm'
+          registry-url: https://registry.npmjs.com
 
       - name: Install dependencies
         run: |
