--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "registry": "https://registry.npmjs.com"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.7",
+    "@biomejs/biome": "2.3.8",
     "@eslint/js": "^9.39.1",
     "@lzwme/fed-lint-helper": "^2.6.6",
     "@types/express": "^5.0.5",
@@ -76,7 +76,7 @@
     "express": "^5.1.0",
     "husky": "^9.1.7",
     "nodemon": "^3.1.11",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.1",
     "standard-version": "^9.5.0",
     "typedoc": "^0.28.14",
     "typescript": "^5.9.3",
